@@ -2107,7 +2107,8 @@ int main(void)
    SY(SYS_lwp_mutex_wakeup, x0, x0); FAIL;
 
    /* SYS_lwp_cond_wait         170 */
-   /* XXX Missing wrapper. */
+   GO(SYS_lwp_cond_wait, "4s 5m");
+   SY(SYS_lwp_cond_wait, x0 + 1, x0 + 1, x0 + 1, x0); FAIL;
 
    /* SYS_lwp_cond_signal       171 */
    /* XXX Missing wrapper. */
